--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			</div>
 		</div>
 	</header>
-	<section class="top-ads">
+	<section id="top-ads">
 		<div class="wrapper">
 			<div class="frame">
 				<div class="wide-ad bit-50"><a href="#"><img src="img/ad1.jpg" alt=""></a></div>
@@ -61,5 +61,59 @@
 			</div>
 		</div>
 	</section>
+	<section id="signup-bar">
+		<div class="wrapper">
+			<div class="frame">
+				<div class="container">
+					<a href="#" class="register bit-20">عضویت</a>
+					<p class="bit-60">با عضویت در آپلود 7 از امکانات ویژه و رایگان برخوردار شوید</p>
+					<span class="bit-25">امکانات ویژه</span>
+				</div>
+			</div>
+		</div>
+	</section>
+	<div id="body" class="frame">
+		<div class="wrapper">
+			<div class="main-container frame">
+				<div class="bit-600">
+					<p class="top-text"><i class="fa fa-cogs"></i>برای آپلود میتوانید از ابزار زیر استفاده نمایید</p>
+					<div class="filetypes">
+						<ul>
+							<li><i class="fa fa-file-code-o"></i></li>
+							<li><i class="fa fa-file-image-o"></i></li>
+							<li><i class="fa fa-file-video-o"></i></li>
+							<li><i class="fa fa-file-audio-o"></i></li>
+							<li><i class="fa fa-file-archive-o"></i></li>
+							<a href="#" class="upload-via-link">آپلود از لینک</a>
+						</ul>
+					</div>
+					<p class="form" id="upload0">
+						<i class="fa fa-times-circle-o delete"></i>
+					    <input type="text" id="path" />
+						<label class="add-photo-btn">انتخاب فایل<span><input type="file" id="myfile" name="myfile" /></span></label>
+					</p>
+					<div class="add-upload"><i class="fa fa-plus-square"></i><a class="add-upload-input">افزودن فایل جدید</a></div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script>
+	        $('#myfile').change(function(){
+				$('#path').val($(this).val());
+			});
+			var c = 0;
+			var cloned;
+			var clonednumber = 0;
+			$(".add-upload-input").on('click',function(){
+				clonednumber++;
+				if (clonednumber < 5) {
+					cloned = $( '#upload'+ c );
+					$("#upload"+c).clone().attr('id', 'upload'+(++c) ).insertAfter( cloned );
+				}
+			});  
+			$(".delete").on('click', function() {
+				$(this).parent("[id^=upload]").remove();
+			});
+	</script>
 </body>
 </html>
